timer label no longer overflows between 400-405px

--- a/public/index.css
+++ b/public/index.css
@@ -305,6 +305,7 @@ margin-bottom: 30px;
   color: var(--blue);
   margin: 15px 0;
   height: 25px;
+  overflow: hidden;
 }
 
 .timer-stats {
@@ -317,12 +318,12 @@ margin-bottom: 30px;
   float: right;
   border: 2px solid var(--blue);
   border-radius: 3px;
-  height: 100px;
-  width: 100px;
+  height: 90px;
+  width: 90px;
   padding: 34px 3px;
   text-align: center;
   color: var(--blue);
-  font-size: 1.2em;
+  font-size: 1em;
   top: 42px;
 }
 
@@ -357,23 +358,21 @@ margin-bottom: 30px;
   display: none;
 }
 
-@media only screen and (min-width: 400px) {
+@media only screen and (min-width: 330px) {
 
-  p {
-    font-size: 1.0em;
-  }
+    .timer-button {
+      height: 100px;
+      width: 100px;
+      font-size: 1.2em;
+    }
+
+}
+
+@media only screen and (min-width: 400px) {
 
   .timer-example-photo {
     width: 400px;
     margin: 40px auto;
-  }
-
-  .timer-label {
-    font-weight: 100;
-    font-size: 1.4em;
-    color: var(--blue);
-    margin: 15px 0;
-    height: 25px;
   }
 
   .leftnav {
@@ -394,6 +393,22 @@ margin-bottom: 30px;
     height: 70px;
     margin: 0;
     padding: 5px 0;
+  }
+
+}
+
+@media only screen and (min-width: 415px) {
+
+  .timer-label {
+    font-weight: 100;
+    font-size: 1.4em;
+    color: var(--blue);
+    margin: 15px 0;
+    height: 25px;
+  }
+
+  p {
+    font-size: 1.0em;
   }
 
 }
